samples/_failures_safe/1761619590_d89735_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64c31029.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_64c31029.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
